--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -32,6 +32,8 @@
     <style>
       body {
         font-family: 'Lexend Deca', sans-serif;
+        width: 100%;
+        height: 100%;
       }
       </style>
   </head>
