--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -31,7 +31,7 @@
     <title>Garbage manager</title>
     <style>
       body {
-        font-family: 'Lexend Deca', sans-serif;
+        font-family: 'Lexend Deca', sans-serif !important; 
         width: 100%;
         height: 100%;
       }
